--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "C_Cpp_Runner.cCompilerPath": "C:\\CodeBlocks\\MinGW\\bin\\gcc.exe",
   "C_Cpp_Runner.cppCompilerPath": "C:\\CodeBlocks\\MinGW\\bin\\g++.exe",
   "C_Cpp_Runner.debuggerPath": "C:\\CodeBlocks\\MinGW\\bin\\gdb.exe",
-  "C_Cpp_Runner.makePath": "C:\\CodeBlocks\\MinGW\\bin\\mingw32-make.exe"
+  "C_Cpp_Runner.makePath": "C:\\CodeBlocks\\MinGW\\bin\\mingw32-make.exe",
+  "files.associations": {
+    "*.tcc": "c"
+  }
 }
