--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,47 @@
   "C_Cpp_Runner.debuggerPath": "C:\\CodeBlocks\\MinGW\\bin\\gdb.exe",
   "C_Cpp_Runner.makePath": "C:\\CodeBlocks\\MinGW\\bin\\mingw32-make.exe",
   "files.associations": {
-    "*.tcc": "c"
+    "*.tcc": "c",
+    "array": "cpp",
+    "atomic": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "cmath": "cpp",
+    "cstdarg": "cpp",
+    "cstddef": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "deque": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp",
+    "exception": "cpp",
+    "algorithm": "cpp",
+    "memory": "cpp",
+    "memory_resource": "cpp",
+    "optional": "cpp",
+    "string": "cpp",
+    "string_view": "cpp",
+    "system_error": "cpp",
+    "tuple": "cpp",
+    "type_traits": "cpp",
+    "utility": "cpp",
+    "fstream": "cpp",
+    "initializer_list": "cpp",
+    "iosfwd": "cpp",
+    "iostream": "cpp",
+    "istream": "cpp",
+    "limits": "cpp",
+    "new": "cpp",
+    "ostream": "cpp",
+    "sstream": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp",
+    "typeinfo": "cpp",
+    "numeric": "cpp",
+    "functional": "cpp",
+    "iterator": "cpp"
   }
 }
